# spotui

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: app.rs  event.rs  main.rs  ui.rs
src/music/: mod.rs
