[package]
name = "spotui"
version = "0.1.0"
description = "My Music Player TUI!"
authors = ["Luke Dinh <lukexdinh@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.32"
ratatui = "0.30.2"
tokio = { version = "1.52.3", features = ["full"] }
color-eyre = "0.6.5"
derive_setters = "0.1.9"
rspotify = { version = "0.16.1", features = ["env-file", "cli"] }

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
